load("@rules_python//python:defs.bzl", "py_library", "py_test")

py_library(
    name = "glsl_interpreter",
    srcs = glob(["*.py"]),
    visibility = ["//visibility:public"],
    deps = [
        "@antlr_grammars_v4//:glsl/py",
    ],
)

py_test(
    name = "la_test",
    srcs = ["la_test.py"],
    deps = [":glsl_interpreter"],
)
